[package]
edition = "2021"
name = "futures-signal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.21"}
log = "0.4.16"

[dev-dependencies]
anyhow = "1.0.57"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
